--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,9 @@
   "display": "standalone",
   "scope": "./",
   "start_url": "./",
+  "background_color": "#f9faf4",
+  "theme_color": "#546253",
+  "description": "A web application for managing medication schedules and reminders.",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
